# units

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  Makefile  README.md  cabal.haskell-ci  cabal.project  forever-typecheck  units-defs.cabal  units.cabal
.github/workflows/: haskell-ci.yml
Data/: Dimensions.hs  Metrology.hs
Data/Constants/: Math.hs  Mechanics.hs
Data/Dimensions/: Dim.hs  DimSpec.hs  Internal.hs  LCSU.hs  Map.hs  Poly.hs  SI.hs  Show.hs  TypePrelude.hs  UnitCombinators.hs  Units.hs  Unsafe.hs  Z.hs
Data/Dimensions/Imperial/: Types.hs  Units.hs
Data/Dimensions/SI/: Dims.hs  Prefixes.hs  Types.hs  Units.hs
Data/Metrology/: AltOperators.hs  Combinators.hs  Dim.hs  DimSpec.hs  Dimensions.hs  Factor.hs  Internal.hs  LCSU.hs  Linear.hs  NoVector.hs  Parser.hs  Poly.hs  Qu.hs  Quantity.hs  SI.hs  Set.hs  Show.hs  TH.hs  Types.hs  UnitCombinators.hs  UnitParser.hs  Units.hs  Unsafe.hs  Validity.hs  Vector.hs  Z.hs
Data/Metrology/Imperial/: Types.hs  US.hs  Units.hs
Data/Metrology/Imperial/US/: Units.hs
Data/Metrology/Imperial/US/Units/: Apothecaries.hs  Avoirdupois.hs  DryVolume.hs  Liquid.hs  Survey.hs  Troy.hs
Data/Metrology/NoVector/: Poly.hs
Data/Metrology/Parser/: Internal.hs
Data/Metrology/SI/: DimTypes.hs  Dims.hs  GenTypes.hs  Mono.hs  MonoTypes.hs  Parser.hs  Poly.hs  PolyTypes.hs  Prefixes.hs  Types.hs  Units.hs
Data/Metrology/SI/Units/: Derived.hs
Data/Metrology/Units/: PreciousMetals.hs
Data/Quantity/: Dimension.hs  Map.hs  Quantity.hs  System.hs  Unit.hs  Zahl.hs
Data/Quantity/Dimension/: SI.hs
Data/Quantity/System/: SI.hs  TH.hs
Data/Quantity/Unit/: SI.hs
Data/Units/: Astronomical.hs  CGS.hs  Imperial.hs  PreciousMetals.hs  SI.hs  US.hs
Data/Units/Imperial/: Area.hs  Length.hs  Misc.hs  Nautical.hs  Survey.hs  Volume.hs  Weight.hs
Data/Units/SI/: Parser.hs  Prefixes.hs
Data/Units/US/: Apothecaries.hs  Avoirdupois.hs  DryVolume.hs  Liquid.hs  Misc.hs  Survey.hs  Troy.hs
Test/: CGS.hs  Imperial.hs  LCSU.hs  Lcsu.hs  LennardJones.hs  MetrologySynonyms.hs  OffSystem.hs  OffSystemAdd.hs  OffSystemCSU.hs  PhysicalConstants.hs  Physics.hs  Promote.hs  PromoteMap.hs  Simulator.hs  Travel.hs  Units.hs
Tests/: Imperial.hs  LennardJones.hs  Linearity.hs  Main.hs  OffSystemAdd.hs  OffSystemCSU.hs  Parser.hs  PhysicalConstants.hs  README.md  Show.hs  Travel.hs  Vector.hs
Tests/Compile/: CGS.hs  EvalType.hs  Lcsu.hs  MetrologySynonyms.hs  NoVector.hs  OffSystem.hs  OffSystemCSU.hs  Physics.hs  Readme.hs  Simulator.hs  T23.hs  TH.hs  Travel.hs  UnitParser.hs  Units.hs
Tests/Compile/Error/: Case1a.hs
Tests/Compile/UnitParser/: Quoters.hs
attic/: 4.hs  LCSU.hs  Promote.hs  how-to-test-TH.sh  install2.sh  promoteTypeLits.hs  testMap.hs
src/Data/: Dimensions.hs
src/Data/Dimensions/: Dim.hs  DimSpec.hs  Internal.hs  Map.hs  SI.hs  Show.hs  TypePrelude.hs  UnitCombinators.hs  Units.hs  Z.hs  Zahl.hs
src/Data/Dimensions/SI/: Types.hs
src/Test/: Physics.hs  Readme.hs  SI.hs  Simulator.hs  Units.hs
test/: CGS.hs  Imperial.hs  Lcsu.hs  MapSpec.hs  OffSystem.hs  OffSystemAdd.hs  OffSystemCSU.hs  OffSystemQu.hs  Physics.hs  Readme.hs  SISpec.hs  Simulator.hs  Travel.hs  Units.hs
tests/: ZahlSpec.hs  doctests.hs
units/: CHANGES.md  README.md  units.cabal
units-defs/: CHANGES.md  README.md  units-defs.cabal
units-defs/Data/Constants/: Math.hs  Mechanics.hs
units-defs/Data/Dimensions/: SI.hs
units-defs/Data/Metrology/: SI.hs
units-defs/Data/Metrology/SI/: Mono.hs  MonoTypes.hs  Poly.hs  PolyTypes.hs
units-defs/Data/Units/: Astronomical.hs  CGS.hs  Eurocard.hs  Imperial.hs  PreciousMetals.hs  SI.hs
units-defs/Data/Units/Imperial/: Area.hs  Length.hs  Misc.hs  Nautical.hs  Survey.hs  Volume.hs  Weight.hs
units-defs/Data/Units/SI/: Prefixes.hs
units-defs/Data/Units/US/: Apothecaries.hs  Avoirdupois.hs  Liquid.hs  Misc.hs  Troy.hs
units-test/: README.md  units-test.cabal
units-test/Tests/: Imperial.hs  LennardJones.hs  Main.hs  README.md  T69.hs
units-test/Tests/Compile/: EvalType.hs  Quantity.hs  Units.hs
units-test/Tests/Compile/Error/: Case1a.hs  Case1b.hs  Case1c.hs
units/Data/: Metrology.hs
units/Data/Metrology/: Dimensions.hs  Factor.hs  Poly.hs  Qu.hs  Quantity.hs  Set.hs  Show.hs  Units.hs  Validity.hs  Vector.hs  Z.hs
units/Tests/: OffSystemAdd.hs  OffSystemCSU.hs  Show.hs  Vector.hs
units/Tests/Compile/: Quantity.hs  TH.hs
wip/: Parser.hs
