name:           units-defs
version:        1.2
cabal-version:  >= 1.10
synopsis:       Definitions for use with the units package
homepage:       http://github.com/goldfirere/units-defs
category:       Physics
author:         Richard Eisenberg <eir@cis.upenn.edu>, Takayuki Muranushi <muranushi@gmail.com>
maintainer:     Richard Eisenberg <eir@cis.upenn.edu>, Takayuki Muranushi <muranushi@gmail.com>
bug-reports:    https://github.com/goldfirere/units-defs/issues
stability:      experimental
extra-source-files: README.md, CHANGES.md
license:        BSD3
license-file:   LICENSE
build-type:     Simple
description:
    This package provides system definitions for use with the separate
    @units@ package. See the individual modules for details.

    User contributions to this package are strongly encouraged. Please
    submit pull requests!

source-repository this
  type:     git
  location: https://github.com/goldfirere/units-defs.git
  tag:      v1.2

library
  build-depends:      
      base >= 4.7 && < 5,
      units >= 2.2 && < 3,
      template-haskell
  exposed-modules:
    Data.Metrology.SI
    Data.Metrology.SI.Mono
    Data.Metrology.SI.Poly
    Data.Metrology.SI.Prefixes
    Data.Metrology.SI.MonoTypes
    Data.Metrology.SI.Units
    Data.Metrology.SI.Dims
    Data.Metrology.SI.PolyTypes
    Data.Metrology.SI.Parser
    Data.Units.SI
    Data.Units.CGS
    Data.Units.US
    Data.Units.US.Apothecaries
    Data.Units.US.Avoirdupois
    Data.Units.US.DryVolume
    Data.Units.US.Liquid
    Data.Units.US.Misc
    Data.Units.US.Survey
    Data.Units.US.Troy
    Data.Units.PreciousMetals
    Data.Constants.Mechanics
    Data.Constants.Math

  default-language:   Haskell2010
  default-extensions: TemplateHaskell
  ghc-options:        -Wall
