name:           units
version:        2.4.1.5
cabal-version:  >= 1.10
synopsis:       A domain-specific type system for dimensional analysis
homepage:       https://github.com/goldfirere/units
category:       Math
author:         Richard Eisenberg <rae@richarde.dev>, Takayuki Muranushi <muranushi@gmail.com>
maintainer:     Richard Eisenberg <rae@richarde.dev>
bug-reports:    https://github.com/goldfirere/units/issues
stability:      experimental
extra-source-files: README.md
                  , CHANGES.md
license:        BSD3
license-file:   LICENSE
build-type:     Simple
Tested-With: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1, GHC == 8.6.3, GHC == 8.8.1, GHC == 8.10.4, GHC == 9.0.1, GHC == 9.2.1
description:

    The units package provides a mechanism for compile-time
    dimensional analysis in Haskell programs. It defines an embedded
    type system based on units-of-measure. The units defined are fully
    extensible, and need not relate to physical properties.

    The package supports defining multiple inter-convertible units,
    such as Meter and Foot. When extracting a number from a
    dimensioned quantity, the desired unit must be specified, and the
    value is converted into that unit.

    If you are looking for specific systems of units (such as SI),
    please see the @units-defs@ package.

    Tests for this package are in a companion package @units-test@,
    available from this package's source repository.

    The Haddock documentation is insufficient for using the units
    package. Please see the README file, available from the package
    home page.


source-repository this
  type:     git
  location: https://github.com/goldfirere/units.git
  tag:      v2.4.1.5

library
  ghc-options: -Wall

  if impl(ghc >= 7.10)
    ghc-options: -fno-warn-unticked-promoted-constructors

  if impl(ghc >= 9.0)
    build-depends: base >= 4.7 && < 5
                 , th-desugar >= 1.5.4
                 , singletons == 3.*
                 , singletons-th == 3.*
                 , singletons-base == 3.*
                 , vector-space >= 0.8
                 , linear >= 1.16.2
                 , template-haskell
                 , mtl >= 1.1
                 , multimap >= 1.2
                 , syb >= 0.3
                 , containers >= 0.4
                 , units-parser >= 0.1 && < 1.0
                 , lens >= 4 && < 6
                 , deepseq >= 1.1.0.0 && < 1.5
  else
    build-depends: base >= 4.7 && < 5
                 , th-desugar >= 1.5.4
                 , singletons >= 0.9 && < 3
                       -- keep it < 3 to avoid the need for singletons-th and -base
                 , vector-space >= 0.8
                 , linear >= 1.16.2
                 , template-haskell
                 , mtl >= 1.1
                 , multimap >= 1.2
                 , syb >= 0.3
                 , containers >= 0.4
                 , units-parser >= 0.1 && < 1.0
                 , lens >= 4 && < 6
                 , deepseq >= 1.1.0.0 && < 1.5
  exposed-modules:
    Data.Metrology,
    Data.Metrology.Internal,
    Data.Metrology.Show,
    Data.Metrology.Unsafe,
    Data.Metrology.Z,
    Data.Metrology.Set,
    Data.Metrology.Vector,
    Data.Metrology.Linear,
    Data.Metrology.Parser,
    Data.Metrology.Poly,
    Data.Metrology.TH,
    Data.Metrology.Quantity

  other-modules:
    Data.Metrology.Factor,
    Data.Metrology.LCSU,
    Data.Metrology.Qu,
    Data.Metrology.Dimensions,
    Data.Metrology.Units,
    Data.Metrology.Combinators,
    Data.Metrology.Validity

    -- cabal now recommends that TH be explicitly listed in cabal files
  other-extensions: TemplateHaskell
  default-language: Haskell2010

